...
                      border: Border.all(color: Colors.white, width: .2),
                      borderRadius: BorderRadius.circular(12),
                    ),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 20),
                      child: TextField(
                        key: const Key('nombreCategoria'),
                        maxLength: 20,
                        controller: _nombreCategoriaController,
                        decoration: const InputDecoration(
                          border: InputBorder.none,
                          hintText: 'Nombre',
                          hintStyle: TextStyle(
                            fontWeight: FontWeight.bold,
                            color: Color(0xff503a27),
                            fontSize: 20,
                          ),
                          contentPadding: EdgeInsets.symmetric(horizontal: 10),
...
                      border: Border.all(color: Colors.white, width: .2),
                      borderRadius: BorderRadius.circular(12),
                    ),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 20),
                      child: TextField(
                        key: const Key('descripcionCategoria'),
                        maxLength: 300,
                        controller: _descripcionCategoriaController,
                        maxLines: null,
                        keyboardType: TextInputType.multiline,
                        decoration: const InputDecoration(
                          border: InputBorder.none,
...
                  height: 2 * (screenheight / 14.6),
                ),
                Center(
                  child: SizedBox(
                    width: screenWidth - 200,
                    child: ElevatedButton(
                      key: const Key('Guardar'),
                      style: ButtonStyle(
                        backgroundColor: WidgetStateProperty.all(Colors.blue),
                      ),
                      onPressed: agregar,
                      child: const Text('Guardar'),
                    ),
...
