...
        Navigator.pushReplacement(
          context,
          MaterialPageRoute(builder: (context) => const Bienvenido()),
        );
      },
      child: AppWithDrawer(
        currentPage: "Categorias",
        content: Scaffold(
          backgroundColor: peach,
          body: Center(
            child: Container(
              width: double.infinity,
              padding: const EdgeInsets.all(20),
...
                ? Icons.check_circle_outlined
                : Icons.delete,
            size: 60,
          ),
        ),
        IconButton(
          key: const Key('AddIcon'),
          onPressed: () {
            Navigator.push(
              context,
              MaterialPageRoute(builder: (context) => const AgregarCategoria()),
            );
          },
...
