...
    bool internet = await conexionInternt(context);
    if (internet == false) {
      return;
    }
    nombre = _nombreCategoriaController.text.trim();
    if ((nombre != widget.categoryName) && (await categoriesExist(nombre))) {
      showSnackbar(context, "El nombre de la categoría ya existe", red);
      return;
    }
    if (nombre.isEmpty) {
      showSnackbar(context, "Ingrese un nombre", red);
      return;
    }
...
                ),
                Align(
                  alignment: Alignment.center,
                  child: Column(
                    children: [
                      IconButton(
                        key: const Key('edit_name'),
                        icon: Icon(
                          isEditingNombre ? Icons.check : Icons.edit,
                          color: Colors.green,
                        ),
                        onPressed: () {
                          setState(() {
...
